# beat-the-balls

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.7AD5C7A0C8B625B7.idx
beat-the-balls/: Cargo.toml
beat-the-balls/src/: lib.rs  main.cpp  main.rs
src/: Main.cpp  Shader.cpp  Shader.hpp  main.cpp  shader.h
